# ur3e-isaac-sim-digital-twin

./: .gitattributes  .gitignore  LICENSE  README.md
assets/scenes/: ur3e_pick_place_demo.usda
assets/ur3e/: ur3e.usd
assets/ur3e/configuration/: ur3e_physics.usd  ur3e_robot_schema.usd  ur3e_sensor.usd
docs/: 01-runpod-ubuntu-desktop.md  02-install-isaac-sim.md  03-install-ros2-moveit2.md  04-sync-external-app-to-isaac-sim.md  05-training-and-skill-solution-directions.md  05-training-roadmap-isaac-lab.md  06-pick-place-demo-status.md
docs/superpowers/plans/: 2026-06-06-ur3e-isaac-sim-digital-twin.md
ros2_ws/src/ur3e_omniverse_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ur3e_omniverse_bridge/test/: test_joint_utils.py
ros2_ws/src/ur3e_omniverse_bridge/ur3e_omniverse_bridge/: __init__.py  display_trajectory_to_joint_command.py  external_joint_state_relay.py  follow_joint_trajectory_to_joint_command.py  http_joint_command_server.py  joint_utils.py  moveit_pick_place_demo.py  moveit_scenario_runner.py  ur3e_joint_command_demo.py
scenarios/: pick_place_blocks.yaml
scripts/: build_ros2_ws.sh  check_isaac_sim.sh  drive_ur3e_demo.py  install_ros2_jazzy_moveit2.sh  open_ur3e_stage.py  run_http_joint_command_server.sh  run_isaac_sim.sh  run_joint_command_demo.sh  run_moveit_isaac_stack.sh  run_moveit_isaac_trajectory_bridge.sh  run_moveit_pick_place_demo.sh  run_moveit_scenario.sh  run_pick_place_demo_scene.sh  run_ur3e_demo_motion.sh  run_ur3e_isaac_sim.sh  run_ur3e_ros2_bridge.sh  setup_fastdds.sh  setup_ur3e_ros2_action_graph.py
