<?xml version="1.0"?>
<package format="3">
  <name>ur3e_omniverse_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 helpers for syncing external UR3e joint commands with NVIDIA Isaac Sim.</description>
  <maintainer email="dev@example.com">RobotX Maintainers</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
